Add TestModel.EMPTY_TEST
This is a useful empty container, which is used all over tests. Add a
constant and refer to it wherever appropriate.

Change-Id: I3f7feff3d854ddbacde9bc9358a580b5577ac6de
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>